package ejemplos;

public class output {
    public double  Display_SquareArea(double  area){
        System.out.println("The square area is: " + area);
        return area;
    }   
    public double  Display_RectangleArea(double  area){
        System.out.println("The rectangle area is: " + area);
        return area;
    }
    public double  Display_CircleArea(double  area){
        System.out.println("The circle area is: " + area);
        return area;
    }

}
